--- a/meridian-nextjs/package.json
+++ b/meridian-nextjs/package.json
@@ -11,11 +11,13 @@
     "dependencies": {
         "@auth/core": "^0.34.2",
         "axios": "^1.7.2",
+        "chart.js": "^4.5.0",
         "clsx": "^2.1.1",
         "lucide-react": "^0.428.0",
         "next": "15.5.4",
         "next-auth": "^4.24.11",
         "react": "^19.0.0",
+        "react-chartjs-2": "^5.3.0",
         "react-dom": "^19.0.0",
         "recharts": "^3.2.1",
         "socket.io-client": "^4.7.5"
