--- a/meridian-nextjs/package.json
+++ b/meridian-nextjs/package.json
@@ -20,7 +20,9 @@
         "react-chartjs-2": "^5.3.0",
         "react-dom": "^19.0.0",
         "recharts": "^3.2.1",
-        "socket.io-client": "^4.7.5"
+        "socket.io-client": "^4.7.5",
+        "vis-data": "^8.0.3",
+        "vis-network": "^10.0.2"
     },
     "devDependencies": {
         "@types/node": "^22.0.0",
