--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,21 @@ test_profile_system.py
 test-auth-e2e.sh
 server.log
 venv
+
+# Environment variables
+.env
+*.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# API Keys and secrets
+config/secrets.json
+secrets/
+credentials/
+
+# Database files
+*.db
+*.sqlite
+*.sqlite3
